--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,6 @@
     color: #3d9756;
 }
 
-.relative {
-    position: relative;
-    height: 100vh;
-    background-color: black;
-}
-
 .container-imagen {
     height: 100vh;
     background-color: black;
@@ -33,8 +27,46 @@
     opacity: 0.6;
 }
 
-.absolute {
-    position: absolute;
-    top: 50%;
-    right: 7rem;
+.bsas-align {
+    margin-right: 6rem;
+}
+
+.margin-bottom-boton {
+    margin-bottom: 0rem;
+}
+
+@media (max-width:324px) {
+    .margin-bottom-boton {
+        margin-bottom: 0.5rem;
+    }
+}
+
+@media (max-width:575.98px) {
+    .bsas-align {
+        margin-right: 0.5rem;
+    }
+}
+
+
+@media (min-width: 576px) and (max-width: 991.98px) {
+    .bsas-align {
+        margin-right: 1rem;
+    }
+}
+
+.btn-blanco-orador {
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #FFFFFF33;
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #FFFFFF66;
+}
+
+.btn-verde-ticket {
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: #28a744;
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #37c868;
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #2ddb90;
+    --bs-btn-active-border-color: #2ddb90;
 }
