scroll-margin-top agregado, primer div arreglado.

--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,7 @@ footer div div div a:active {
 footer div div div a:active {
     color: #FFFFFF44;
 }
+
+#oradores, #lugar-fecha {
+    scroll-margin-top: 5rem;
+}
